--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
 				<input name = "username" type = "text" required>
 				<h4>password</h4>
 				<input name = "password" type = "password" required>
-				<button class = "my-3 d-block btn btn-primary" type = "submit"> register </button>
+				<button class = "my-3 d-block btn btn-primary" type = "submit"> login </button>
 			</form>
 			<h4>  new user?  <a href = "/register">register!</a></h4>
 		</div>
