--- a/views/results.ejs
+++ b/views/results.ejs
@@ -20,7 +20,7 @@
                    <tr class = "item d-none">
                        <td> 
                            <% if (user) { %>
-                            <button class = "additem btn btn-outline-primary" 
+                            <button class = "additem" 
                             data-item-name = "<%= items[i].name %>" 
                             data-item-name-lower = "<%= items[i].name_lower %>" 
                             data-item-price = "<%= items[i].statdata.currentPrice.price %>"
