--- a/views/sorted.ejs
+++ b/views/sorted.ejs
@@ -15,7 +15,7 @@
                 <th>CURRENT TREND DURATION</th>
                 <th>MEMBERS ONLY</th>
                 <% if (progressbars) { %>
-                    <th> PROGRESS BARS</th>
+                    <th>SCORE</th>
                 <% } %>
     		</tr>
             <% for(var i=0; i < items.length; i++) { %>
