--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,28 +2,28 @@
 
 <div id = "iconcontainer">
 	<div class = "container">
-		<div class = "row">
-			<div class = "col-4">
+		<div class = "row justify-content-around">
+			<div class = "col-5">
 				<div class = "container iconfeature">
 					<div class = "row justify-content-center">
 						<i class="fa fa-search fa-3x"></i>
 					</div>
 				</div>
 			</div>
-			<div class = "col-4">
+			<div class = "col-5">
 				<div class = "container iconfeature">
 					<div class = "row justify-content-center">
 						<i class="fa fa-line-chart fa-3x"></i>
 					</div>
 				</div>
 			</div>
-			<div class = "col-4">
+			<!-- <div class = "col-4">
 				<div class = "container iconfeature">
 					<div class = "row justify-content-center">
 						<i class="fa fa-trophy fa-3x"></i>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div>
