--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <head>
-<title>OSRS Tracker</title>
+<title>GE Tracker</title>
 
 <!-- bootstrap js-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light">
-	  <a class="navbar-brand ml-4" href="/">OSTracker</a>
+	  <a class="navbar-brand ml-4" href="/">GETracker</a>
 	  <div class="collapse navbar-collapse">
 	    <ul class="navbar-nav mr-auto">
 	     	
