--- a/public/app.css
+++ b/public/app.css
@@ -1,8 +1,3 @@
-body
-{
-	background-color: #EEEBE4;
-}
-
 td
 {
 	border : black solid 2px;
@@ -18,9 +13,15 @@ table tr:nth-child(even)
 	pointer-events: none;
 }
 
+/*.navbar
+{
+	background-color: #eeebe4;
+}*/
+
 .mainfeature
 {
-	background-color: #EEEBE4;
+	/*#eeebe4 light nav + wrap evreything in light boxes, background navy*/
+	/*background-color: #1c2a37;*/
 	box-shadow: 0 15px 6px -6px #888888;
 	z-index : 0;
 	overflow-y: auto;
@@ -113,11 +114,7 @@ courtesy of https://www.w3schools.com/howto/howto_css_flip_card.asp
 }
 
 #featurecontainer {
-  width: 100%;
-  padding-right: 13%;
-  padding-left: 13%;
-  margin-right: auto;
-  margin-left: auto;
+  
   margin-top: 50px;
 }
 
@@ -198,19 +195,14 @@ courtesy of https://www.w3schools.com/howto/howto_css_flip_card.asp
 	border-radius: 25px;
 }
 
-#inthegreen
+#profits
 {
 	position : absolute;
 	width: 13%;
 	top: 70px;
 }
 
-.greeninvestment
-{
-	font-size: 15px;
-}
-
-#inthered
+#losses
 {
 	position : absolute;
 	width: 13%;
