--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,49 +22,21 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-light bg-light navbar-expand-sm">
+	<nav class="navbar navbar-light bg-light">
 	  <a class="navbar-brand" href="/">GETracker</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-	  	<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id ="navbarText">
-	    <ul class="navbar-nav">
-	     	
-	    </ul>
-	    <span class="navbar-text">
-	    	<a class ="nav-link" href = "/about"> about </a>
-	    </span>
-	    <span class="navbar-text">
-	    	<% if (user){ %>
-				<form action = "/logout" method = POST>
-					<button class = "btn btn-light" type = "submit"> logout </button>
-				</form>
-				<% } else {%>
-				<a class ="nav-link" href = "/login" > login </a>
-			<% }%>
-	    </span>
-	  </div>
+	  	<div>
+		    <span class="navbar-text">
+		    	<a class ="nav-link" href = "/about"> about </a>
+		    </span>
+		    <span class="navbar-text">
+		    	<% if (user){ %>
+					<form action = "/logout" method = POST>
+						<button class = "btn btn-light" type = "submit"> logout </button>
+					</form>
+					<% } else {%>
+					<a class ="nav-link" href = "/login" > login </a>
+				<% }%>
+		    </span>
+		</div>
 	</nav>
-	
-	<!-- <nav class="navbar navbar-light bg-light">
-	  <a class="navbar-brand" href="#">Navbar</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-	    <ul class="navbar-nav">
-	    </ul>
-	    <span class="navbar-text">
-	    	<a class ="nav-link" href = "/about"> about </a>
-	    </span>
-	    <span class="navbar-text">
-	    	<% if (user){ %>
-				<form action = "/logout" method = POST>
-					<button class = "btn btn-light" type = "submit"> logout </button>
-				</form>
-				<% } else {%>
-				<a class ="nav-link" href = "/login" > login </a>
-			<% }%>
-	    </span>
-	  </div>
-	</nav> -->
+
