added delete button for user investments

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,8 @@
 								<h3 class = "text-center"> search </h3>
 								<form action = "./item/search" method = "POST">
 									<div class = "d-flex justify-content-center">
-													<input class = "text-center" id = "searchbox" type = "text" name = "searchQuery" placeholder= "enter item name" minlength="3"required><button  type="submit">
+										<input class = "text-center" id = "searchbox" type = "text" name = "searchQuery" placeholder= "enter item name" minlength="3"required>
+										<button  type="submit">
 											<i class="fa fa-search"></i>
 										</button>
 									</div>
