--- a/views/results.ejs
+++ b/views/results.ejs
@@ -24,7 +24,8 @@
                             data-item-name = "<%= items[i].name %>" 
                             data-item-name-lower = "<%= items[i].name_lower %>" 
                             data-item-price = "<%= items[i].statdata.currentPrice.price %>"
-                            data-item-updated = "<%= items[i].lastUpdated.toDateString() %>">
+                            data-item-updated = "<%= items[i].lastUpdated.valueOf()%>"
+                            data-item-id = "<%= items[i].id %>">
                                    <i class = "fa fa-plus"> </i> 
                                </button>
                            <% } %>
@@ -67,12 +68,12 @@
         var itemNameLower = $(this).data().itemNameLower;
         var itemPrice = $(this).data().itemPrice;
         var lastUpdated = $(this).data().itemUpdated;
-        console.log(lastUpdated);
+        var itemId = $(this).data().itemId;
 
 
        var form = $(
                     "<div class = 'container itemtab'>" +
-                        "<form method = 'POST' action = '/item/add/" + itemNameLower + "/" + window.location.href.split("/").join("_").split("?").join("-") + "'>" +
+                        "<form method = 'POST' action = '/item/add/" + itemId + "/" + window.location.href.split("/").join("_").split("?").join("-") + "'>" +
                             "<h1>" + itemName + " (" + itemPrice + "gp each)</h1>" +
                             "<h3> quantity </h3>" +
                             "<input name = 'quantity' type = 'number' min = 1 required>" +
