--- a/views/partials/profits.ejs
+++ b/views/partials/profits.ejs
@@ -21,7 +21,7 @@
 							<img src = "/images/small/<%=profits[i].id%>.gif" title = "<%=profits[i].name%>">
 						</a>
 						x<%=profits[i].numInvested%>
-						<form action = "/item/delete/<%=profits[i]._id%>" method = POST>
+						<form class = "deleteitem" action = "hello" method = POST data-item-id = "<%= profits[i]._id %>">
 							<button class="btn btn-dark">
 								<i class="fa fa-trash"></i>
 							</button>
@@ -57,3 +57,10 @@
 		<% } %>
 	</div>
 <% }%>
+
+<script>
+	$(".deleteitem").submit(function(e)
+	{
+		 $(this).attr("action", "/item/delete/" + $(this).data().itemId + "/" + window.location.href.split("/").join("_").split("?").join("-"));
+	})
+</script>
